Fix small alignment issue with logo

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -204,6 +204,9 @@
 		.title{
 			color: #d52d2d;
 			font-weight: bold;
+			font-size: 42px;
+    	line-height: 32px;
+    	margin-bottom: 3px;
 		}
 		.sub-title{
 			font-size: 14px;
